<resources>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="app_name">mElSmart</string>
    <string name="device">Device</string>
    <string name="no_device">Connect a device</string>
    <string name="select_device">Connect a device</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">connect</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="BatteryLevel">    Battery Level</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit mElSmart</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="DebugValue">Debug</string>
    <string name="title_activity_registration">Registration Activity</string>
    <string name="title_activity_about">About</string>
    <string name="button_label_on">\u2713</string>
    <string name="button_label_off">off</string>
    <string name="action_settings">About</string>
    <string name="Invalid_IN_Out">Invalid IN/Out</string>
    <string name="Invalid_Door">Invalid Door</string>
    <string name="System_Locked">System_Locked</string>
    <string name="Exit_Entry_Missed">Exit_Entry_Missed</string>
    <string name="Card_Expired">Expiry Date</string>
    <string name="CardType1">CardType1</string>
    <string name="CardType2">CardType2</string>
    <string name="BlackListed_Card">BlackListed Card</string>
    <string name="READER_ERROR_SET">READER ERROR SET</string>
    <string name="READER_ERROR_CLEAR">READER ERROR CLEAR</string>
    <string name="DOOR_KEPT_OPEN_ALARM">DOOR KEPT OPEN ALARM</string>
    <string name="DOOR_FORCED_OPEN_ALARM">DOOR FORCED OPEN ALARM</string>
    <string name="no_google_playservice_available">No Google Playservice found. Please install it.</string>
    <string name="EPB_ALARM">EPB ALARM</string>
    <string name="EMBU_ALARM">EMBU ALARM</string>
    <string name="DOOR_OPENED_BY_COMMAND">DOOR OPENED BY COMMAND</string>
    <string name="BIOMETRIC_ERROR_SET">BIOMETRIC ERROR SET</string>
    <string name="BIOMETRIC_ERROR_CLEAR">BIOMETRIC ERROR CLEAR</string>
    <string name="DATE_TIME_ALARM_SET">DATE TIME ALARM SET</string>
    <string name="DATE_TIME_ALARM_CLEAR">DATE TIME ALARM CLEAR</string>
    <string name="Punched_Successfully">Punched Successfully </string>
    <string name="IN">IN</string>
    <string name="OUT">OUT</string>
    <string name="CARD_BLACKLISTED">CARD BLACKLISTED</string>
    <string name="ACCESS_DENIED">ACCESS DENIED</string>
    <string name="CARD_EXPIRED">CARD EXPIRED</string>
    <string name="ANTIPASS_BACK_ERROR">ANTIPASS BACK ERROR</string>
    <string name="ACCESS_DURING_LOCK">ACCESS DURING LOCK</string>
    <string name="ACCESS_DURING_HOLIDAY">ACCESS DURING HOLIDAY</string>
    <string name="ACCESS_DURING_LEAVE">ACCESS DURING LEAVE</string>
    <string name="PIN_FAIL">PIN FAIL</string>
    <string name="BIO_FAIL">BIO FAIL</string>
    <string name="DURESS_CODE">DURESS CODE</string>
    <string name="ACCESS_SCHEDULE">ACCESS SCHEDULE</string>
    <string name="FLASH_WRITE_FAIL">FLASH WRITE FAIL</string>
    <string name="BIO_DEVICE_ERR">BIO DEVICE ERR</string>
    <string name="ACCESS_SCORT">ACCESS SCORT</string>
    <string name="CARDTWING">CARD TWING</string>
    <string name="SYSTEM_HALTED">SYSTEM HALTED</string>
    <string name="FPTIMEOUTERROR">FPTIME OUT ERROR</string>
    <string name="NOTSUPPORTED">NOT SUPPORTED</string>
    <string name="NOTENROLLED">NOT ENROLLED</string>
    <string name="NOFINGERDETECT">NO FINGER DETECT</string>
    <string name="READER_ERROR">AREADER ERROR</string>
    <string name="OK">OK</string>
    <string name="Bluetooth_has_turned_on">Bluetooth has turned on </string>
    <string name="connecting"> - connecting</string>
    <string name="Registration_data_file_does_not_exist">Registration data file does not exist</string>
    <string name="Registration_does_not_exist">Registration  does not exist</string>
    <string name="onResume_BT_not_enabled_yet">onResume - BT not enabled yet</string>
    <string name="onResume">onResume</string>
    <string name="onRestart">onRestart</string>
    <string name="onPause">onPause</string>
    <string name="onStop">onStop</string>
    <string name="Disconnected_to">Disconnected to:</string>
    <string name="Not_Connected">Not Connected</string>
    <string name="Connect">Connect</string>
    <string name="UART_DISCONNECT_MSG">UART_DISCONNECT_MSG</string>
    <string name="Connected_to">Connected to:</string>
    <string name="readyy">- ready</string>
    <string name="Disconnect">Disconnect</string>
    <string name="UART_CONNECT_MSG">UART_CONNECT_MSG</string>
    <string name="Unable_to_initialize_Bluetooth">Unable to initialize Bluetooth</string>
    <string name="onServiceConnected_mService">onServiceConnected mService</string>
    <string name="Registered">Registered</string>
    <string name="UnRegistered">UnRegistered</string>
    <string name="Confirm">Confirm</string>
    <string name="Connected">-Connected</string>
    <string name="Are_you_sure_to_do_Registration_Again">Are you sure to do Registration Again?</string>
    <string name="File_write_failed">File write failed:</string>
    <string name="Error">Error</string>
    <string name="No_registration_information_found_on_the_device">No registration information found on the device</string>
    <string name="Registration_file_doesnt_exists">Registration file does not exists</string>
    <string name="Registration_deleted_Successfully">Registration deleted Successfully</string>
    <string name="Registration_not_deleted">Registration not deleted</string>
    <string name="hexBinary_needs_to_be_even_length">hexBinary needs to be even-length:</string>
    <string name="contains_illegal_character_for_hexBinary">contains illegal character for hexBinary:</string>
    <string name="BadgeNo">Badge ID</string>
    <string name="IMEI">IMEI</string>
    <string name="Lenght_of_file">Lenght of file:</string>
    <string name="download">download</string>
    <string name="Registration_successfully">Registration successfully</string>
    <string name="Information">Information</string>
    <string name="No_Internet_Connection_Found">No Internet Connection Found</string>
    <string name="Please_enter_badge_number">Please enter badge number</string>
    <string name="Please_enter_service_url">Please enter service url</string>
    <string name="Registration_Failed">Registration Failed</string>
    <string name="File_Empty">File Empty</string>
    <string name="Rssi">Rssi</string>
    <string name="VibrationValue">Vibration</string>
    <string name="Eacs">Eacs</string>
    <string name="Elsmart">Elsmart</string>
    <string name="UNREGISTER">UNREGISTER</string>
    <string name="REGISTER">REGISTER</string>
    <string name="Status">Status</string>
    <string name="Title">Title</string>
    <string name="Department">Department</string>
    <string name="Card_Valid_From">Valid From</string>
    <string name="Card_Issued_From">Issued From</string>
    <string name="System">System</string>
    <string name="Service_URL">Service URL</string>
    <string name="Registration">Registration</string>
    <string name="Punch">Punch</string>
    <string name="Re_Register_for_Elsmart_System">Need to be Re-Register for Elsmart System</string>
    <string name="Re_Register_for_Eacs_System">Need to be Re-Register for Eacs System</string>
    <string name="Secondary_Data_added_successfully">Secondary Data added successfully</string>
    <string name="title_activity_records">Records</string>
    <string name="Logs">Logs</string>
    <string name="AutoPunch">Auto Punch</string>
    <string name="title_activity_record_logs">recordLogs</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_device">Device</string>
    <string name="title_activity_biometric">mElSmart</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint"></string>
    <string name="note">Your device should have at least one fingerprint registered in device settings</string>
    <string name="title_activity_home">mElSmart</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>
    <string name="title_activity_barcode_capture">QR Code</string>
    <string name="title_activity_barcodemain">QR Code</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="emp_name">Name</string>
    <string name="No">S.No</string>
    <string name="Date">Date</string>
    <string name="Terminal_No">Terminal No</string>
    <string name="Direction">Direction</string>
    <string name="MAC_Address"> MAC Address</string>
    <string name="device_name"> Device Name</string>
    <string name="Manual_Punch_Detail"> Manual Punch Detail</string>
    <string name="IN_Time">IN Time</string>
    <string name="OUT_Time">OUT Time</string>
    <string name="From_Date">From Date</string>
    <string name="Remarks">Remarks</string>
    <string name="Leave_Detail">Leave Detail</string>
    <string name="Leave_Type">Leave Type</string>
    <string name="To_Date">To Date</string>
    <string name="Hourly_Leave"> Hourly Leave</string>
    <string name="Submit_Request">Submit Request</string>
    <string name="Update">Update</string>
    <string name="Task_Name">Task Name</string>
    <string name="Start_Date">Start Date</string>
    <string name="End_date">End date</string>
    <string name="Plan">Plan</string>
    <string name="Customer_Feedback">Customer Feedback</string>
    <string name="Comments">Comments</string>
</resources>