<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    >
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_span="0"
            android:background="#c0c0c0"
            android:gravity="left"
            android:padding="10sp"
            android:text="@string/No"
            android:textStyle="bold"></TextView>



        <TextView
            android:layout_width="79dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:background="#c0c0c0"
            android:gravity="left"
            android:padding="10sp"
            android:text="@string/Date"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:layout_column="2"
            android:background="#c0c0c0"
            android:gravity="right"
            android:padding="10sp"
            android:text="@string/Terminal_No"
            android:textStyle="bold"></TextView>
        <TextView
            android:layout_width="37dp"
            android:layout_height="match_parent"
            android:layout_column="3"
            android:background="#c0c0c0"
            android:gravity="right"
            android:padding="10sp"
            android:text="@string/Direction"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="100dp"
            android:layout_column="4"
            android:background="#c0c0c0"
            android:gravity="right"
            android:padding="10sp"
            android:text="@string/emp_name"
            android:textStyle="bold"></TextView>

    </TableRow>


</TableLayout>