<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/Registration_id"
        android:title="@string/Registration"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings_applications_white_24dp"/>
    <item
        android:id="@+id/About_id"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/Record_id"
        android:title="@string/Logs"
        app:showAsAction="never"
       />
    <item
        android:id="@+id/Setting_id"
        android:title="Settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/Device_id"
        android:title="Registered Terminal"
        app:showAsAction="never"
        />

</menu>