<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LeaveRequest"
    android:id="@+id/cLayoutLR"
    android:background="@drawable/backimage"
    tools:showIn="@layout/activity_leave_request">

    <TextView
        android:id="@+id/lblHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/Leave_Detail"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/button_tab_size"/>

    <TextView
        android:id="@+id/lblSysType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/Leave_Type"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textview_small_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />/>

    <Spinner
        android:id="@+id/spLeaveType"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"

        android:textSize="@dimen/textview_small_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblHeading" />

    <TextView
        android:id="@+id/lblDate"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/From_Date"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textview_small_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSysType" />

    <EditText
        android:id="@+id/edtFromDate"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/From_Date"
        android:textSize="@dimen/textview_small_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spLeaveType" />

    <TextView
        android:id="@+id/lblToDate"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/To_Date"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textview_small_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDate" />

    <EditText
        android:id="@+id/edtToDate"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/To_Date"
        android:textSize="@dimen/textview_small_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFromDate" />

    <CheckBox
        android:id="@+id/chkHrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/Hourly_Leave"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textview_small_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblToDate" />

    <com.electronia.mElsmart.CustomEditText.TimeEditText
        android:id="@+id/edtTime"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:textSize="@dimen/textview_middle_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtToDate" />

    <TextView
        android:id="@+id/lblcomments"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/Remarks"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textview_small_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkHrs" />


    <EditText
        android:id="@+id/txtcomment"
        android:layout_width="200dp"
        android:layout_height="97dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:textSize="@dimen/textview_small_size"
        android:fontFamily="monospace"
        android:gravity="top"
        android:inputType="textMultiLine"

        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTime" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/Submit_Request"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/button_tab_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>