<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimage"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MPRequest"
    tools:showIn="@layout/activity_mprequest">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/Manual_Punch_Detail"
        android:textSize="@dimen/button_tab_size"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/lblDate"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="82dp"
        android:text="@string/Date"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textview_small_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtFromDate"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/Date"
        android:textSize="@dimen/textview_small_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/chkFromTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/IN_Time"

        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textview_small_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDate" />

    <EditText
        android:id="@+id/editFromTime"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/IN_Time"
        android:textSize="@dimen/textview_small_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFromDate" />

    <CheckBox
        android:id="@+id/chkToTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:text="@string/OUT_Time"

        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textview_small_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkFromTime" />

    <EditText
        android:id="@+id/editToTime"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/OUT_Time"
        android:textSize="@dimen/textview_small_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFromTime" />

    <TextView
        android:id="@+id/lblcomments"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/Remarks"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textview_small_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkToTime" />


    <EditText
        android:id="@+id/txtcomment"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:fontFamily="monospace"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:textSize="@dimen/textview_small_size"


        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editToTime" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Submit_Request"
        android:textSize="@dimen/button_tab_size"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/txtcomment" />


</androidx.constraintlayout.widget.ConstraintLayout>